# fraClaimRidge-FWA-Service

./: .gitignore  README.md  pyproject.toml  requirements.txt
alembic/versions/: 0001_initial_schema.py
models/fixtures/: label_encoders.pkl  layer1_anomaly_v1.xgb  layer1_metrics.json
scripts/: analyze_graph.py  analyze_timeseries.py  baseline_providers.py  fraud_check.py  test_inference.py  train_layer1.py
src/: config.py  dependencies.py  main.py
src/api/: cases.py  dashboard.py  flags.py  index.html  router.py  scores.py
src/case_engine/: severity.py
src/core/: cache.py  database.py
src/kafka/: consumer.py  handlers.py
src/layer1_anomaly/: detector.py
src/layer2_fingerprint/: detector.py
src/layer3_graph/: detector.py
src/layer4_timeseries/: detector.py
src/models/: database.py
src/repositories/: base.py  flag_repo.py
src/schemas/: case.py  flag.py  score.py
