[project]
name = "fwa-svc"
version = "0.1.0"
description = "ClaimRidge Fraud Waste & Abuse Detection Service"
authors = [
    { name = "ClaimRidge Engineering", email = "eng@claimridge.com" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "confluent-kafka>=2.3.0",
    "redis>=5.0.1",
    "temporalio>=1.4.0",
    "xgboost>=2.0.3",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "networkx>=3.2.1",
    "mlflow>=2.10.0",
    "structlog>=24.1.0",
    "alembic>=1.13.1",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.26.0",
    "coverage>=7.4.1",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
